[package]
name = "offsig-demo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "offsig_demo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
getrandom = { version = "0.1.16", features = ["dummy"] }
libsecp256k1 = "0.6.0"
anchor-lang = "0.21.0"